@@ -1,6 +1,5 @@
 package com.gmail.nossr50.datatypes.json;
 
-import com.gmail.nossr50.datatypes.json.McMMOUrl;
 import com.gmail.nossr50.locale.LocaleLoader;
 import com.gmail.nossr50.util.StringUtils;
 
